--- a/MySqlManagement/MySqlManagement.csproj
+++ b/MySqlManagement/MySqlManagement.csproj
@@ -5,10 +5,11 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <StartupObject>MyApp.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DataBases\" />
+    <Folder Include="Databases\" />
   </ItemGroup>
 
 </Project>
