Add commands by args

--- a/MySqlManagement/Properties/launchSettings.json
+++ b/MySqlManagement/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "MySqlManagement": {
       "commandName": "Project",
-      "commandLineArgs": "mybdd -u root -p root -f=json"
+      "commandLineArgs": "mybdd --user root --password root"
     }
   }
 }
